# Tactile-Grasp-Studio

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  environment.yml  main.py  main_ros2.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
arm_control/: __init__.py
communication/: __init__.py  mqtt_client.py
config/: __init__.py  camera_config.py  deep_learning_config.py  default_config.json  default_config.yaml  demo_config.py  learm_arm_config.py  path_planning_config.py  paxini_gen3_config.py  ros_bridge.py  simulation_config.py  task_config.py
core/: __init__.py  control_thread.py  data_acquisition.py  demo_manager.py  safety_monitor.py  system_controller.py
data_management/: __init__.py  dataset_builder.py  experiment_recorder.py  replay_buffer.py  visualization_tools.py
deep_learning/: __init__.py  pid_controller.py  reinforcement_learning.py  trainer.py  utils.py
docs/: README.md  github_code_architecture_style.md  phase1_kickoff.md  phase2_hardware_kickoff.md  phase4_ui_bridge_kickoff.md  phase5_task_kickoff.md  phase6_sim_gazebo_kickoff.md  ros2_environment_setup_guide.md  ros2_refactor_plan.md  system_overview_manual.md  windows_ros2_realsense_quickstart.md  windows_ros2_terminal_setup.md  windows_vm_one_click_runbook.md  windows_vm_split_phaseA.md  windows_vm_split_phaseB.md
gui/: __init__.py  arm_status_panel.py  (+1 more)
ros2_ws/src/tactile_ui_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_ui_bridge/resource/: tactile_ui_bridge
ros2_ws/src/tactile_ui_bridge/tactile_ui_bridge/: __init__.py  tactile_subscriber.py
(+197 files in other folders)
